# routes/user.js
@@ -11,22 +11,6 @@ try {
     res.status(500).json({ message: err.message})
 }
 })
-
-// Modify a user
-router.put('/:id', getUser, async (req, res) => {
-    if (req.body.email != null){
-        res.user.email = req.body.email
-    }
-    if (req.body.password != null){
-      res.user.password = req.body.password
-    }
-    try {
-        const updatedUser = await res.user.save()
-        res.json(updatedUser)
-    } catch (err){
-        res.status(400).json({message: err.message})
-    }
-  })
   
 //Delete A User
 router.delete('/:id', getUser, async (req, res) => {
